{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 484,
  "lineage": "79f7c130-4631-6698-c919-816eb2f57f85",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06869ccd39f25be65",
            "association_id": "eipassoc-0d8f5902292e0213e",
            "domain": "vpc",
            "id": "eipalloc-06869ccd39f25be65",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0effbc53afdd8a7e2",
            "private_dns": "ip-10-0-14-123.ec2.internal",
            "private_ip": "10.0.14.123",
            "public_dns": "ec2-3-232-162-61.compute-1.amazonaws.com",
            "public_ip": "3.232.162.61",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ec581fe35640f2ae",
            "domain": "vpc",
            "id": "eipalloc-0ec581fe35640f2ae",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-221-105-90.compute-1.amazonaws.com",
            "public_ip": "44.221.105.90",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:667864223568:instance/i-0c1592261eb3800d2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c1592261eb3800d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0df77361cf83304f1",
            "private_dns": "ip-10-0-14-19.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.14.19",
            "public_ip": "54.204.125.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-010c3d7305ccf2b26",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036bbf3c215455445",
            "tags": {
              "Name": "studio-ghibli-bastion"
            },
            "tags_all": {
              "Name": "studio-ghibli-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06a8bce87b132bbc0"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667864223568:internet-gateway/igw-0382b567efc5c75af",
            "id": "igw-0382b567efc5c75af",
            "owner_id": "667864223568",
            "tags": {
              "Name": "studio-ghibli-igw"
            },
            "tags_all": {
              "Name": "studio-ghibli-igw"
            },
            "vpc_id": "vpc-08bba19e208507f90"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:667864223568:loadbalancer/app/studio-ghibli-load-balacer/ee4529d3e707e3cc",
            "arn_suffix": "app/studio-ghibli-load-balacer/ee4529d3e707e3cc",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "studio-ghibli-load-balacer-1080315037.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:667864223568:loadbalancer/app/studio-ghibli-load-balacer/ee4529d3e707e3cc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "studio-ghibli-load-balacer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a87351c911af5d33"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-036bbf3c215455445"
              },
              {
                "subnet_id": "subnet-0638e7ef7be09fff3"
              }
            ],
            "subnets": [
              "subnet-036bbf3c215455445",
              "subnet-0638e7ef7be09fff3"
            ],
            "vpc_id": "vpc-08bba19e208507f90",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ecs_security_group",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:667864223568:listener/app/studio-ghibli-load-balacer/ee4529d3e707e3cc/04eb3c788646ca79",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:667864223568:targetgroup/studio-ghibli-my-target-group/5a8552f6ff00f7a4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:667864223568:listener/app/studio-ghibli-load-balacer/ee4529d3e707e3cc/04eb3c788646ca79",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:667864223568:loadbalancer/app/studio-ghibli-load-balacer/ee4529d3e707e3cc",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.my_alb",
            "aws_lb_target_group.my_target_group",
            "aws_security_group.ecs_security_group",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "my_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:667864223568:targetgroup/studio-ghibli-my-target-group/5a8552f6ff00f7a4",
            "arn_suffix": "targetgroup/studio-ghibli-my-target-group/5a8552f6ff00f7a4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:667864223568:targetgroup/studio-ghibli-my-target-group/5a8552f6ff00f7a4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "studio-ghibli-my-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08bba19e208507f90"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06869ccd39f25be65",
            "association_id": "eipassoc-0d8f5902292e0213e",
            "connectivity_type": "public",
            "id": "nat-0919b9e2e30a8931b",
            "network_interface_id": "eni-0effbc53afdd8a7e2",
            "private_ip": "10.0.14.123",
            "public_ip": "3.232.162.61",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-036bbf3c215455445",
            "tags": {
              "Name": "studio-ghibli-nat-gateway-1"
            },
            "tags_all": {
              "Name": "studio-ghibli-nat-gateway-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.my_igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_subnet_1_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-099a0f61dfbbf51231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0919b9e2e30a8931b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-099a0f61dfbbf5123",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.my_igw",
            "aws_nat_gateway.my_nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0382b567efc5c75af",
            "id": "r-rtb-0a600f5674efb02bc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a600f5674efb02bc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_route_table",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667864223568:route-table/rtb-099a0f61dfbbf5123",
            "id": "rtb-099a0f61dfbbf5123",
            "owner_id": "667864223568",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0919b9e2e30a8931b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "studio-ghibli-private-route-table"
            },
            "tags_all": {
              "Name": "studio-ghibli-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bba19e208507f90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667864223568:route-table/rtb-0a600f5674efb02bc",
            "id": "rtb-0a600f5674efb02bc",
            "owner_id": "667864223568",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0382b567efc5c75af",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "studio-ghibli-public-route-table"
            },
            "tags_all": {
              "Name": "studio-ghibli-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bba19e208507f90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b5fba701878f03a",
            "route_table_id": "rtb-099a0f61dfbbf5123",
            "subnet_id": "subnet-04b9892f5e3f50c28"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f26e2cd07545615",
            "route_table_id": "rtb-099a0f61dfbbf5123",
            "subnet_id": "subnet-0eaf9c4dd4b34669d"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3a23b94333a9696",
            "route_table_id": "rtb-0a600f5674efb02bc",
            "subnet_id": "subnet-036bbf3c215455445"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dc9c8096a100c3b",
            "route_table_id": "rtb-0a600f5674efb02bc",
            "subnet_id": "subnet-0638e7ef7be09fff3"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667864223568:security-group/sg-06a8bce87b132bbc0",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a8bce87b132bbc0",
            "ingress": [
              {
                "cidr_blocks": [
                  "84.203.34.211/32"
                ],
                "description": "Allow ssh from MyIp",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "studio-ghibli-bastion_sg",
            "name_prefix": "",
            "owner_id": "667864223568",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "studio-ghibli-bastion-sg"
            },
            "tags_all": {
              "Name": "studio-ghibli-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bba19e208507f90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667864223568:security-group/sg-0a87351c911af5d33",
            "description": "Allow container and http connection",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowed online availability ",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a87351c911af5d33",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow load balancer to access container on port 3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow load balancer to be accessed by internet users ",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240122123845145400000004",
            "name_prefix": "terraform-",
            "owner_id": "667864223568",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "studio-ghibli-ecs-security-group"
            },
            "tags_all": {
              "Name": "studio-ghibli-ecs-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bba19e208507f90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667864223568:security-group/sg-01c31cef8bf96f819",
            "description": "Allow inbound access on port 3306 for RDS",
            "egress": [],
            "id": "sg-01c31cef8bf96f819",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow fargate and Bastion to access RDS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "studio-ghibli-rds-sg",
            "name_prefix": "",
            "owner_id": "667864223568",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "studio-ghibli-database-security-group"
            },
            "tags_all": {
              "Name": "studio-ghibli-database-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bba19e208507f90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667864223568:security-group/sg-0042e93b493bde69a",
            "description": "Allow inbound access on port 80",
            "egress": [],
            "id": "sg-0042e93b493bde69a",
            "ingress": [],
            "name": "studio-ghibli-vpc-security-group",
            "name_prefix": "",
            "owner_id": "667864223568",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "studio-ghibli-vpc-security-group"
            },
            "tags_all": {
              "Name": "studio-ghibli-vpc-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bba19e208507f90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667864223568:subnet/subnet-04b9892f5e3f50c28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b9892f5e3f50c28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667864223568",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "studio-ghibli-private-subnet-1"
            },
            "tags_all": {
              "Name": "studio-ghibli-private-subnet-1"
            },
            "vpc_id": "vpc-08bba19e208507f90"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667864223568:subnet/subnet-0eaf9c4dd4b34669d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eaf9c4dd4b34669d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "667864223568",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "studio-ghibli-private-subnet-2"
            },
            "tags_all": {
              "Name": "studio-ghibli-private-subnet-2"
            },
            "vpc_id": "vpc-08bba19e208507f90"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667864223568:subnet/subnet-036bbf3c215455445",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036bbf3c215455445",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "667864223568",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "studio-ghibli-public-subnet-1"
            },
            "tags_all": {
              "Name": "studio-ghibli-public-subnet-1"
            },
            "vpc_id": "vpc-08bba19e208507f90"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667864223568:subnet/subnet-0638e7ef7be09fff3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0638e7ef7be09fff3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "667864223568",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "studio-ghibli-public-subnet-2"
            },
            "tags_all": {
              "Name": "studio-ghibli-public-subnet-2"
            },
            "vpc_id": "vpc-08bba19e208507f90"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:667864223568:vpc/vpc-08bba19e208507f90",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0284a63b3ca44a7d0",
            "default_route_table_id": "rtb-005188047f4cc279a",
            "default_security_group_id": "sg-0072317895a52818a",
            "dhcp_options_id": "dopt-066cc2ea312803660",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08bba19e208507f90",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-005188047f4cc279a",
            "owner_id": "667864223568",
            "tags": {
              "Name": "studio-ghibli-vpc"
            },
            "tags_all": {
              "Name": "studio-ghibli-vpc"
            }
          }
        }
      ]
    }
  ]
}